--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,8 +1,61 @@
-@media screen and (max-width: 1200px) {               /* if screen less then 1200px switch to hambuger nav */
+@media screen and (max-width: 1200px) {
     #destop-nav {
         display: none;
     }
+
     #hamburger-nav {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 10vh;
+        padding: 0 5rem;
+        position: sticky;
+        top: 0;
+        background-color: rgba(250, 250, 250, 0.9);
+        backdrop-filter: blur(10px);
+        z-index: 100;
+        border-bottom: 1px solid #eaeaea;
+    }
+
+    /* Stack the profile section on smaller screens */
+    #profile {
+        flex-direction: column-reverse;
+        /* Text bottom, image top */
+        height: auto;
+        gap: 3rem;
+        padding: 4rem 0;
+    }
+
+    .section__text {
+        text-align: center;
+    }
+
+    .section__text__p1,
+    .title {
+        text-align: center;
+    }
+
+    .btn-container,
+    #social-container {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #hamburger-nav {
+        padding: 0 2rem;
+    }
+
+    section {
+        margin: 0 5%;
+    }
+
+    .section__pic-container {
+        width: 250px;
+        height: 250px;
+    }
+
+    .title {
+        font-size: 2.5rem;
     }
 }
