--- a/style.css
+++ b/style.css
@@ -258,11 +258,19 @@ h2 span.stop-blinking::before {
     cursor: pointer;
     height: 1.5rem;
     opacity: 0.7;
-    transition: opacity 300ms ease;
+    transition: opacity 300ms ease, transform 300ms ease;
 }
 
 .icon:hover {
     opacity: 1;
+}
+
+.email-icon {
+    transform: scale(1.3);
+}
+
+.email-icon:hover {
+    transform: scale(1.3);
 }
 
 /* BUTTONS */
