--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ section.doc-section:last-of-type {
 /* Hero Stacking */
 
 .hero-section {
+    padding-top: 8rem;
     padding-bottom: 4rem;
     border-bottom: 1px solid #eaeaea;
 }
